--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/routes/server.js",
+    "start": "nodemon ./src/start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
