--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.1",
     "supertest": "^6.3.3"
   }
